# django-fluo

./: .hgignore  .hgtags  COPYING  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  admin.rst  coding.rst  conf.py  copying.rst  customizations.rst  email.rst  index.rst  models.rst  requirements.rst  shortcuts.rst
docs/views/: decorators.rst  index.rst
fluo/: __init__.py  apps.py  context_processors.py  hack.py  http.py  settings.py  shortcuts.py  urls.py
fluo/admin/: __init__.py  admin.py  base.py  hack.py  models.py  nested.py  sites.py  views.py  widgets.py
fluo/conf/: __init__.py  settings.py
fluo/conf/app_template/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
fluo/conf/project_template/: admin.py  forms.py  local_pythonpath_sample.py  local_settings_sample.py  manage.py  models.py  settings.py  tests.py  urls.py  uwsgi.sh  views.py  wsgi.py
fluo/conf/project_template/admin/: __init__.py  dashboard.py  menu.py
fluo/conf/project_template/settings/: __init__.py  base.py  local_sample.py
fluo/conf/project_template/templates/: 404.html  500.html  index.html  robots.txt  template.html
fluo/db/: __init__.py  backend.py  south.py
fluo/db/backends/: __init__.py  dummy.py  mysql.py  oracle.py  postgis.py  postgresql.py  postgresql_psycopg2.py  spatialite.py  sqlite3.py
fluo/db/models/: __init__.py  enums.py  fields.py  models.py  postgresql.py  subclassing.py
fluo/forms/: __init__.py  fields.py  widgets.py
fluo/http/: __init__.py
fluo/locale/en/LC_MESSAGES/: django.mo  django.po
fluo/locale/it/LC_MESSAGES/: django.mo  django.po
fluo/management/: __init__.py  base.py  database.py  mixins.py
fluo/management/commands/: __init__.py  compilemessages.py  createdb.py  devdb.py  dropdb.py  initdb.py  load_admin_data.py  makemessages.py  newapp.py  newproject.py  passwd.py  pip.py  resetdb.py  serve.py  sslserve.py  startapp.py
fluo/management/commands/db/: __init__.py
fluo/media/fluo/jquery-ajaxqueue/: jquery.ajaxqueue.min.js
fluo/middleware/: __init__.py  debug.py  locale.py
fluo/models/: __init__.py  fields.py  models.py
fluo/templates/admin/: base_site.html  custom_site.html  filter.html  languages.html
fluo/templatetags/: __init__.py  backports.py  i18n_tags.py  media_tags.py
fluo/utils/: decorators.py  deprecation.py  json.py  log.py  mail.py  uuid.py  version.py
fluo/views/: __init__.py  base.py  decorators.py  view.py
fluo/views/decorators/: ajax.py
(+60 files in other folders)
