[flake8]
exclude = build,.git,.hg,.tox,.lib
ignore = W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
not_skip = __init__.py

[metadata]
license-file = COPYING

[wheel]
universal = 0

[bdist_wheel]
universal=0
