[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__
ignore = W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 119
multi_line_output = 5
not_skip = __init__.py
indent = 4

[metadata]
license-file = COPYING

[bdist_wheel]
universal = 0
