[metadata]
name = django-fluo
version = attr: fluo.__version__
description = various django utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/django-fluo/
project_urls =
    GitHub = https://github.com/rsalmaso/django-fluo
    GitLab = https://gitlab.com/rsalmaso/django-fluo
author = Raffaele Salmaso
author_email = raffaele@salmaso.org
license = MIT
platforms = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
python_requires = >= 3.8
packages = find:
install_requires =
    django
zip_safe = false

[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__,*/migrations/*.py
ignore = W503
inline-quotes = "
max-complexity = 18
max-line-length = 120
select = B,C,E,F,W,T4,B9
show-source = true

[isort]
add_imports = from __future__ import annotations
profile = black
combine_as_imports = true
default_section = THIRDPARTY
indent = 4
known_third_party = django,environ,pyquery,pytz,requests,rest_framework
line_length = 120

[bdist_wheel]
universal = 0
